@@ -56,6 +56,7 @@ importFrom(crawl,argosDiag2Cov)
 importFrom(crawl,crwMLE)
 importFrom(crawl,crwPostIS)
 importFrom(crawl,crwPredict)
+importFrom(crawl,crwPredictPlot)
 importFrom(crawl,crwSimulator)
 importFrom(doParallel,registerDoParallel)
 importFrom(doParallel,stopImplicitCluster)
@@ -91,6 +92,7 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,segments)
+importFrom(graphics,title)
 importFrom(gstat,gstat)
 importFrom(gstat,vgm)
 importFrom(mitools,MIcombine)
