@@ -1,7 +1,7 @@
 
 #' Plot \code{crwData}
 #' 
-#' Plot observed locations, predicted locations, and error ellipses (if applicable) from \code{\link{crwData}} object.
+#' Plot observed locations, error ellipses (if applicable), predicted locations, and prediction intervals from \code{\link{crwData}} object.
 #' 
 #' @method plot crwData
 #'
@@ -9,10 +9,11 @@
 #' @param animals Vector of indices or IDs of animals for which information will be plotted.
 #' Default: \code{NULL} ; all animals are plotted.
 #' @param compact \code{TRUE} for a compact plot (all individuals at once), \code{FALSE} otherwise
-#' (default -- one individual at a time).
+#' (default -- one individual at a time). Ignored unless \code{crwPredictPlot=FALSE}.
 #' @param ask If \code{TRUE}, the execution pauses between each plot.
-#' @param plotEllipse If \code{TRUE} (the default) then error ellipses are plotted (if applicable)
-#' @param ... Currently unused. For compatibility with generic method.
+#' @param plotEllipse If \code{TRUE} (the default) then error ellipses are plotted (if applicable). Ignored unless \code{crwPredictPlot=FALSE}.
+#' @param crawlPlot Logical indicating whether or not to create individual plots using \code{\link[crawl]{crwPredictPlot}}. See \code{\link[crawl]{crwPredictPlot}} for details.
+#' @param ... Further arguments for passing to \code{\link[crawl]{crwPredictPlot}}
 #' 
 #' @details 
 #' In order for error ellipses to be plotted, the names for the semi-major axis, semi-minor axis, and 
@@ -21,6 +22,8 @@
 #' 
 #' If the \code{crwData} object was created using data generated by
 #' \code{\link{simData}} or \code{\link{simObsData}}, then the true locations (\code{mux},\code{muy}) are also plotted.
+#' 
+#' @seealso \code{\link[crawl]{crwPredictPlot}}
 #'
 #' @examples
 #' \dontrun{
@@ -42,10 +45,11 @@
 #'
 #' @export
 #' @importFrom grDevices gray adjustcolor
-#' @importFrom graphics abline axis hist mtext par plot points legend
+#' @importFrom graphics abline axis hist mtext par plot points legend title
 #' @importFrom conicfit calculateEllipse
+#' @importFrom crawl crwPredictPlot
 
-plot.crwData <- function(x,animals=NULL,compact=FALSE,ask=TRUE,plotEllipse=TRUE,...)
+plot.crwData <- function(x,animals=NULL,compact=FALSE,ask=TRUE,plotEllipse=TRUE,crawlPlot=FALSE,...)
 {
   # check arguments
   if(length(x)<1 | any(dim(x)<1))
@@ -102,37 +106,79 @@ plot.crwData <- function(x,animals=NULL,compact=FALSE,ask=TRUE,plotEllipse=TRUE,
   par(mar=c(5,4,4,2)-c(0,0,2,1)) # bottom, left, top, right
   par(ask=ask)
   
-    if(compact) {
-      ################################
-      ## Map of all animals' tracks ##
-      ################################
-      par(mfrow = c(1,1))
-      
-      # determine bounds
-      ind <- which(data$ID %in% unique(data$ID)[animalsInd])
-      x <- data$x[ind]
-      y <- data$y[ind]
-      mu.x <- data$mu.x[ind]
-      mu.y <- data$mu.y[ind]
-      truex <- data$mux[ind]
-      truey <- data$muy[ind]
-      
-      xmin <- min(c(x,mu.x,truex),na.rm=T)
-      xmax <- max(c(x,mu.x,truex),na.rm=T)
-      ymin <- min(c(y,mu.y,truey),na.rm=T)
-      ymax <- max(c(y,mu.y,truey),na.rm=T)
-      # make sure that x and y have same scale
-      if(xmax-xmin>ymax-ymin) {
-        ymid <- (ymax+ymin)/2
-        ymax <- ymid+(xmax-xmin)/2
-        ymin <- ymid-(xmax-xmin)/2
+  if(compact & !crawlPlot) {
+    ################################
+    ## Map of all animals' tracks ##
+    ################################
+    par(mfrow = c(1,1))
+    
+    # determine bounds
+    ind <- which(data$ID %in% unique(data$ID)[animalsInd])
+    x <- data$x[ind]
+    y <- data$y[ind]
+    mu.x <- data$mu.x[ind]
+    mu.y <- data$mu.y[ind]
+    truex <- data$mux[ind]
+    truey <- data$muy[ind]
+    
+    xmin <- min(c(x,mu.x,truex),na.rm=T)
+    xmax <- max(c(x,mu.x,truex),na.rm=T)
+    ymin <- min(c(y,mu.y,truey),na.rm=T)
+    ymax <- max(c(y,mu.y,truey),na.rm=T)
+    # make sure that x and y have same scale
+    if(xmax-xmin>ymax-ymin) {
+      ymid <- (ymax+ymin)/2
+      ymax <- ymid+(xmax-xmin)/2
+      ymin <- ymid-(xmax-xmin)/2
+    } else {
+      xmid <- (xmax+xmin)/2
+      xmax <- xmid+(ymax-ymin)/2
+      xmin <- xmid-(ymax-ymin)/2
+    }
+    
+    ID <- unique(data$ID)[animalsInd[1]]
+    ind <- which(data$ID==ID)
+    x <- data$x[ind]
+    y <- data$y[ind]
+    mu.x <- data$mu.x[ind]
+    mu.y <- data$mu.y[ind]
+    truex <- data$mux[ind]
+    truey <- data$muy[ind]
+
+    # plot the first animal's track
+    if(!is.null(truex) & !is.null(truey)){
+      if(plotEllipse & !is.null(data$error_semimajor_axis) & !is.null(data$error_semiminor_axis) & !is.null(data$error_ellipse_orientation)){
+        s<-which(!is.na(x))[1]
+        errorEllipse<-getEllipse(x[s],y[s],data$error_semimajor_axis[ind][s],data$error_semiminor_axis[ind][s],data$error_ellipse_orientation[ind][s])
+        plot(errorEllipse[,1],errorEllipse[,2],type="l",xlab="x",ylab="y",xlim=c(xmin,xmax),ylim=c(ymin,ymax),lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1),asp=1)
+        for(s in which(!is.na(x))[-1]){
+          errorEllipse<-getEllipse(x[s],y[s],data$error_semimajor_axis[ind][s],data$error_semiminor_axis[ind][s],data$error_ellipse_orientation[ind][s])
+          lines(errorEllipse[,1],errorEllipse[,2],lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1))
+        }
+        points(truex,truey,type="l",lwd=3,col=gray(.75))
       } else {
-        xmid <- (xmax+xmin)/2
-        xmax <- xmid+(ymax-ymin)/2
-        xmin <- xmid-(ymax-ymin)/2
+        plot(truex,truey,type="l",lwd=3,xlab="x",ylab="y",xlim=c(xmin,xmax),ylim=c(ymin,ymax),col=gray(.75),asp=1)
       }
-      
-      ID <- unique(data$ID)[animalsInd[1]]
+      points(mu.x,mu.y,type="o",lwd=1.3,xlab="x",ylab="y",pch=20,col=colors[animalsInd[1]],cex=0.5)
+    } else {
+      if(plotEllipse & !is.null(data$error_semimajor_axis) & !is.null(data$error_semiminor_axis) & !is.null(data$error_ellipse_orientation)){
+        s<-which(!is.na(x))[1]
+        errorEllipse<-getEllipse(x[s],y[s],data$error_semimajor_axis[ind][s],data$error_semiminor_axis[ind][s],data$error_ellipse_orientation[ind][s])
+        plot(errorEllipse[,1],errorEllipse[,2],type="l",xlab="x",ylab="y",xlim=c(xmin,xmax),ylim=c(ymin,ymax),lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1),asp=1)
+        for(s in which(!is.na(x))[-1]){
+          errorEllipse<-getEllipse(x[s],y[s],data$error_semimajor_axis[ind][s],data$error_semiminor_axis[ind][s],data$error_ellipse_orientation[ind][s])
+          lines(errorEllipse[,1],errorEllipse[,2],lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1))
+        }
+        points(mu.x,mu.y,type="o",lwd=1.3,pch=20,col=colors[animalsInd[1]],cex=0.5)
+      } else {
+        plot(mu.x,mu.y,type="o",lwd=1.3,xlab="x",ylab="y",pch=20,xlim=c(xmin,xmax),ylim=c(ymin,ymax),col=colors[animalsInd[1]],cex=0.5,asp=1)
+      }
+    }
+    points(x[!is.na(x)],y[!is.na(x)],xlab="x",ylab="y",pch=20,cex=0.5)
+    
+    # add each other animal's track to the map
+    for(zoo in animalsInd[-1]) {
+      ID <- unique(data$ID)[zoo]
       ind <- which(data$ID==ID)
       x <- data$x[ind]
       y <- data$y[ind]
@@ -140,85 +186,46 @@ plot.crwData <- function(x,animals=NULL,compact=FALSE,ask=TRUE,plotEllipse=TRUE,
       mu.y <- data$mu.y[ind]
       truex <- data$mux[ind]
       truey <- data$muy[ind]
-
-      # plot the first animal's track
-      if(!is.null(truex) & !is.null(truey)){
-        if(plotEllipse & !is.null(data$error_semimajor_axis) & !is.null(data$error_semiminor_axis) & !is.null(data$error_ellipse_orientation)){
-          s<-which(!is.na(x))[1]
+      
+      if(plotEllipse & !is.null(data$error_semimajor_axis) & !is.null(data$error_semiminor_axis) & !is.null(data$error_ellipse_orientation)){
+        for(s in which(!is.na(x))){
           errorEllipse<-getEllipse(x[s],y[s],data$error_semimajor_axis[ind][s],data$error_semiminor_axis[ind][s],data$error_ellipse_orientation[ind][s])
-          plot(errorEllipse[,1],errorEllipse[,2],type="l",xlab="x",ylab="y",xlim=c(xmin,xmax),ylim=c(ymin,ymax),lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1),asp=1)
-          for(s in which(!is.na(x))[-1]){
-            errorEllipse<-getEllipse(x[s],y[s],data$error_semimajor_axis[ind][s],data$error_semiminor_axis[ind][s],data$error_ellipse_orientation[ind][s])
-            lines(errorEllipse[,1],errorEllipse[,2],lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1))
-          }
-          points(truex,truey,type="l",lwd=3,col=gray(.75))
-        } else {
-          plot(truex,truey,type="l",lwd=3,xlab="x",ylab="y",xlim=c(xmin,xmax),ylim=c(ymin,ymax),col=gray(.75),asp=1)
-        }
-        points(mu.x,mu.y,type="o",lwd=1.3,xlab="x",ylab="y",pch=20,col=colors[animalsInd[1]],cex=0.5)
-      } else {
-        if(plotEllipse & !is.null(data$error_semimajor_axis) & !is.null(data$error_semiminor_axis) & !is.null(data$error_ellipse_orientation)){
-          s<-which(!is.na(x))[1]
-          errorEllipse<-getEllipse(x[s],y[s],data$error_semimajor_axis[ind][s],data$error_semiminor_axis[ind][s],data$error_ellipse_orientation[ind][s])
-          plot(errorEllipse[,1],errorEllipse[,2],type="l",xlab="x",ylab="y",xlim=c(xmin,xmax),ylim=c(ymin,ymax),lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1),asp=1)
-          for(s in which(!is.na(x))[-1]){
-            errorEllipse<-getEllipse(x[s],y[s],data$error_semimajor_axis[ind][s],data$error_semiminor_axis[ind][s],data$error_ellipse_orientation[ind][s])
-            lines(errorEllipse[,1],errorEllipse[,2],lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1))
-          }
-          points(mu.x,mu.y,type="o",lwd=1.3,pch=20,col=colors[animalsInd[1]],cex=0.5)
-        } else {
-          plot(mu.x,mu.y,type="o",lwd=1.3,xlab="x",ylab="y",pch=20,xlim=c(xmin,xmax),ylim=c(ymin,ymax),col=colors[animalsInd[1]],cex=0.5,asp=1)
+          lines(errorEllipse[,1],errorEllipse[,2],lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1))
         }
       }
+      if(!is.null(truex) & !is.null(truey)) points(truex,truey,type="l",lwd=3,col=gray(.75))
+      points(mu.x,mu.y,type="o",lwd=1.3,pch=20,col=colors[zoo],cex=0.5)
       points(x[!is.na(x)],y[!is.na(x)],xlab="x",ylab="y",pch=20,cex=0.5)
-      
-      # add each other animal's track to the map
-      for(zoo in animalsInd[-1]) {
-        ID <- unique(data$ID)[zoo]
-        ind <- which(data$ID==ID)
-        x <- data$x[ind]
-        y <- data$y[ind]
-        mu.x <- data$mu.x[ind]
-        mu.y <- data$mu.y[ind]
-        truex <- data$mux[ind]
-        truey <- data$muy[ind]
-        
-        if(plotEllipse & !is.null(data$error_semimajor_axis) & !is.null(data$error_semiminor_axis) & !is.null(data$error_ellipse_orientation)){
-          for(s in which(!is.na(x))){
-            errorEllipse<-getEllipse(x[s],y[s],data$error_semimajor_axis[ind][s],data$error_semiminor_axis[ind][s],data$error_ellipse_orientation[ind][s])
-            lines(errorEllipse[,1],errorEllipse[,2],lty=1,cex=0.5,col=adjustcolor(1,alpha.f=0.1))
-          }
-        }
-        if(!is.null(truex) & !is.null(truey)) points(truex,truey,type="l",lwd=3,col=gray(.75))
-        points(mu.x,mu.y,type="o",lwd=1.3,pch=20,col=colors[zoo],cex=0.5)
-        points(x[!is.na(x)],y[!is.na(x)],xlab="x",ylab="y",pch=20,cex=0.5)
-      }
-      
-      legendtxt<-c("observed")
-      legendcol<-c(1)
-      legendpch<-c(20)
-      legendlty<-c(NA)
-      legendlwd<-c(NA)
-      if(!is.null(truex) & !is.null(truey)){
-        legendtxt<-c(legendtxt,"true")
-        legendcol<-c(legendcol,gray(.75))
-        legendpch<-c(legendpch,NA)
-        legendlty<-c(legendlty,1)
-        legendlwd<-c(legendlwd,3)
-      }
-      legendtxt<-c(legendtxt,unique(data$ID)[animalsInd])
-      legendcol<-c(legendcol,colors[animalsInd])
-      legendpch<-c(legendpch,rep(NA,length(animalsInd)))
-      legendlty<-c(legendlty,rep(1,length(animalsInd)))
-      legendlwd<-c(legendlwd,rep(3,length(animalsInd)))
+    }
+    
+    legendtxt<-c("observed")
+    legendcol<-c(1)
+    legendpch<-c(20)
+    legendlty<-c(NA)
+    legendlwd<-c(NA)
+    if(!is.null(truex) & !is.null(truey)){
+      legendtxt<-c(legendtxt,"true")
+      legendcol<-c(legendcol,gray(.75))
+      legendpch<-c(legendpch,NA)
+      legendlty<-c(legendlty,1)
+      legendlwd<-c(legendlwd,3)
+    }
+    legendtxt<-c(legendtxt,unique(data$ID)[animalsInd])
+    legendcol<-c(legendcol,colors[animalsInd])
+    legendpch<-c(legendpch,rep(NA,length(animalsInd)))
+    legendlty<-c(legendlty,rep(1,length(animalsInd)))
+    legendlwd<-c(legendlwd,rep(3,length(animalsInd)))
 
-      legend("topright",legendtxt,col=legendcol,pch=legendpch,lty=legendlty,lwd=legendlwd,bty="n")
+    legend("topright",legendtxt,col=legendcol,pch=legendpch,lty=legendlty,lwd=legendlwd,bty="n")
+    
+  } else {
+    for(zoo in animalsInd) {
       
-    } else {
-      for(zoo in animalsInd) {
+      ID <- unique(data$ID)[zoo]
+      ind <- which(data$ID==ID)
         
-        ID <- unique(data$ID)[zoo]
-        ind <- which(data$ID==ID)
+      if(!crawlPlot){
+        
         x <- data$x[ind]
         y <- data$y[ind]
         mu.x <- data$mu.x[ind]
@@ -294,9 +301,17 @@ plot.crwData <- function(x,animals=NULL,compact=FALSE,ask=TRUE,plotEllipse=TRUE,
         legendlty<-c(legendlty,1)
         legendlwd<-c(legendlwd,3)
         legend("topright",legendtxt,col=legendcol,pch=legendpch,lty=legendlty,lwd=legendlwd,bty="n")
-      }      
-    }
-    
+      } else {
+        crawl::crwPredictPlot(data[ind,],...)
+        titleInd <- TRUE
+        if(!missing(...)) {
+          if("main" %in% names(list(...))) titleInd <- FALSE
+        }
+        if(titleInd) title(main=paste("Animal ID:",ID))
+      }
+    }      
+  }
+  
 
   
   # set graphical parameters back to default
