@@ -18,6 +18,8 @@ NEW FEATURES
 
 * retrySD argument added to fitHMM and MIfitHMM for specifying standard deviation of random normal perturbations when using retryFits
 
+* crawlPlot argument added to plot.crwData as a wrapper for crawl::crwPredictPlot
+
 CHANGES
 
 * For multiple imputation analyses, pseudoRes (and plotPR) now calculate (and plot) pseudo-residuals individually for each model fit
